Changeout games for webretro

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               />
             </svg>
           </button>
-          <button id="games-button" class="btn btn-ghost">
+          <button id="webretro-button" class="btn btn-ghost">
             <svg
-              id="games-button-icon"
+              id="webretro-button-icon"
               class="w-6 h-6"
               fill="currentColor"
               viewBox="0 0 640 512"
