Simplify content in index.html
Replaced humorous content with a simpler heading.

--- a/index.html
+++ b/index.html
@@ -89,18 +89,7 @@
         <div
           class="sm:text-sm lg:text-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty"
         >
-          "Yo, this GitHub... <strong>straight up Skibidi Toilet vibes</strong>,
-          no cap. :| Every repo lookin' like a cursed toilet seat, full of bugs.
-          Code? Nah, it's just vibes and chaos. Imagine someone said 'GitHub'
-          and they heard 'throw random files in a folder.' You click on a repo,
-          and it's like x_x, 'index.html' is just a <strong>404 dance</strong>,
-          and every commit message is like 'pls work' but it never do. >.< You
-          got one repo called "FinalProject2020" that's just broken scripts, no
-          README, and 500 emojis in the commit log.
-          <strong> Certified cringe content</strong>, but not in a cool meme
-          way. It's like trying to watch Skibidi Toilet but it's stuck buffering
-          and the captions make less sense than the actual videos. .."
-          <h1 class="text-right"><strong> ~ ChatGPT </strong></h1>
+          <h1> Vibe code... </h1>
         </div>
       </div>
     </div>
