--- a/index.html
+++ b/index.html
@@ -81,16 +81,9 @@
       <div
         class="flex items-center justify-center gap-10 bg-base-200 p-5 rounded-xl shadow-md mr-4 w-full"
       >
-        <div class="avatar m-10">
-          <div class="sm:w-60 lg:w-80 rounded-xl shadow-md">
-            <img src="img/cloudirector.jpg" />
+          <div class="overflow-hidden rounded-xl shadow-md m-10">
+            <img src="img/banner.jpg" />
           </div>
-        </div>
-        <div
-          class="sm:text-sm lg:text-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty"
-        >
-          <h1> Vibe code... </h1>
-        </div>
       </div>
     </div>
   </body>
